--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.14.0",
     "jest-expo": "~27.0.0",
-    "react-test-renderer": "16.3.1"
+    "nodemon": "^1.18.3",
+    "react-native-scripts": "1.14.0",
+    "react-test-renderer": "16.3.1",
+    "sequelize": "^4.38.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -13,13 +15,15 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "jest"
+    "test": "jest",
+    "database": "nodemon ./db//models/User.js"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "expo": "^27.0.1",
+    "mysql2": "^1.6.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-navigation": "^2.11.2"
