--- a/package.json
+++ b/package.json
@@ -25,11 +25,8 @@
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
     "test": "jest",
-<<<<<<< HEAD
-    "lint": "eslint ./"
-=======
-    "database": "nodemon ./db//models/Stop.js"
->>>>>>> setup Category, Itienrary, Stop models
+    "lint": "eslint ./",
+    "database": "nodemon ./db/models/Stop.js"
   },
   "jest": {
     "preset": "jest-expo"
