--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "expo": "^27.0.1",
-    "mysql2": "^1.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "morgan": "^1.9.0",
     "mysql": "^2.16.0",
+    "mysql2": "^1.6.1",
     "native-base": "^2.7.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-segmented-control-tab": "^3.3.1",
     "react-navigation": "^2.11.2",
     "request": "^2.69.0",
     "router": "^1.3.3",
