--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "eslint": "^5.3.0",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "jest": "23.4.1",
     "jest-expo": "~27.0.0",
     "nodemon": "^1.18.3",
     "react-native-scripts": "1.14.0",
-    "react-test-renderer": "16.3.1"
+    "react-test-renderer": "16.3.1",
+    "sequelize": "^4.38.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -44,11 +45,8 @@
     "native-base": "^2.7.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
-<<<<<<< HEAD
-    "react-native-segmented-control-tab": "^3.3.1",
-=======
     "react-native-google-places-autocomplete": "^1.3.9",
->>>>>>> (feat) Add CreateStop component. Change Create Component into CreateItinerary component. Add navigation on App.js.
+    "react-native-segmented-control-tab": "^3.3.1",
     "react-navigation": "^2.11.2",
     "request": "^2.69.0",
     "router": "^1.3.3",
