--- a/package.json
+++ b/package.json
@@ -43,13 +43,15 @@
     "mysql": "^2.16.0",
     "mysql2": "^1.6.1",
     "native-base": "^2.7.2",
-    "react": "16.3.1",
+    "react": "^16.3.1",
+    "react-dom": "^16.4.2",
     "react-native": "~0.55.2",
     "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-segmented-control-tab": "^3.3.1",
     "react-navigation": "^2.11.2",
     "request": "^2.69.0",
     "router": "^1.3.3",
-    "sequelize": "^4.38.0"
+    "sequelize": "^4.38.0",
+    "tcomb-form-native": "^0.6.15"
   }
 }
