--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "react": "^16.3.1",
     "react-dom": "^16.4.2",
     "react-native": "~0.55.2",
-    "react-native-google-places-autocomplete": "^1.3.9",
+    "react-native-app-link": "^0.4.1",
     "react-native-elements": "^0.19.1",
+    "react-native-google-places-autocomplete": "^1.3.9",
+    "react-native-map-link": "^2.1.0",
     "react-native-segmented-control-tab": "^3.3.1",
     "react-navigation": "^2.11.2",
     "request": "^2.69.0",
