--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jest": "23.4.1",
     "jest-expo": "~27.0.0",
     "nodemon": "^1.18.3",
+    "react-devtools": "^3.2.3",
     "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1",
     "sequelize": "^4.38.0"
@@ -33,6 +34,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
